--- a/Pages/about.html
+++ b/Pages/about.html
@@ -21,7 +21,20 @@
             <div class="flex items-start cursor-pointer gap-[20px]">
                 <div id="menus-category"
                     class="flex hidden sm:flex w-[140px]  rounded-[5px] h-[40px] justfiy-between pl-[8px] pr-[15px] gap-[20px] items-center bg-[#70C05B]">
-                    <img src="../assets/header/menu.png" alt="menu">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#ffff">
+                        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
+                    </svg>
+                    <p class="text-[white]">Каталог</p>
+                </div>
+
+                <div id="menus-category-close"
+                    class="category-close flex hidden sm:flex w-[140px]  rounded-[5px] h-[40px] justfiy-between pl-[8px] pr-[15px] gap-[20px] items-center bg-[#70C05B]">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#ffff">
+                        <path
+                            d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
+                    </svg>
                     <p class="text-[white]">Каталог</p>
                 </div>
                 <div id="search-category" class="flex sm:hidden flex items-center gap-[10px]">
@@ -45,10 +58,12 @@
                     <img src="../assets/header/product.png" alt="product">
                     <p>продукты</p>
                 </div>
-                <div class="flex cursor-pointer items-center flex-col gap-[7px]">
-                    <img src="../assets/header/cart.png" alt="cart">
-                    <p>Корзина</p>
-                </div>
+                <a href="./cart.html">
+                    <div class="flex cursor-pointer items-center flex-col gap-[7px]">
+                        <img src="../assets/header/cart.png" alt="cart">
+                        <p>Корзина</p>
+                    </div>
+                </a>
             </div>
             <div class="hidden lg:flex flex cursor-pointer items-center gap-[10px]">
                 <img src="../assets/header/avatar (7).png" alt="avatar">
@@ -98,7 +113,7 @@
             <input class="border-[1px] outline-none border-[#70C05B] px-[10px] w-full py-[5px] rounded-[5px]"
                 placeholder="Найти товар" type="search">
         </div>
-        <ul class="flex px-[15px] flex-col py-[25px] gap-[7px]">
+        <ul class="flex px-[15px] flex-col py-[25px] gap-[7px] h-[480px] overflow-y-scroll">
             <li>Молоко, сыр, яйцо</li>
             <hr class="text-[#70C05B]">
             <li>Хлеб</li>
@@ -152,7 +167,7 @@
                                 class="w-full  rounded-[4px] text-[#70C05B] hover:text-[white] duration-[0.5s] hover:bg-[#FF6633] hover:border-none cursor-pointer h-[35px] sm:h-[40px] border-[1px] border-[#70C05B]">
                                 В корзину
                             </button>
-                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] left-[232px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
+                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] right-[15px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
                                 src="../assets/header/layk.png" alt="layk">
                         </div>
                     </div>
@@ -172,7 +187,7 @@
                                 class="w-full  rounded-[4px] text-[#70C05B] hover:text-[white] duration-[0.5s] hover:bg-[#FF6633] hover:border-none cursor-pointer h-[35px] sm:h-[40px] border-[1px] border-[#70C05B]">
                                 В корзину
                             </button>
-                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] left-[232px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
+                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] right-[15px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
                                 src="../assets/header/layk.png" alt="layk">
                         </div>
                     </div>
@@ -192,7 +207,7 @@
                                 class="w-full  rounded-[4px] text-[#70C05B] hover:text-[white] duration-[0.5s] hover:bg-[#FF6633] hover:border-none cursor-pointer h-[35px] sm:h-[40px] border-[1px] border-[#70C05B]">
                                 В корзину
                             </button>
-                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] left-[232px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
+                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] right-[15px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
                                 src="../assets/header/layk.png" alt="layk">
                         </div>
                     </div>
@@ -212,7 +227,7 @@
                                 class="w-full  rounded-[4px] text-[#70C05B] hover:text-[white] duration-[0.5s] hover:bg-[#FF6633] hover:border-none cursor-pointer h-[35px] sm:h-[40px] border-[1px] border-[#70C05B]">
                                 В корзину
                             </button>
-                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] left-[232px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
+                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] right-[15px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
                                 src="../assets/header/layk.png" alt="layk">
                         </div>
                     </div>
@@ -235,7 +250,7 @@
                                 class="w-full  rounded-[4px] text-[#70C05B] hover:text-[white] duration-[0.5s] hover:bg-[#FF6633] hover:border-none cursor-pointer h-[35px] sm:h-[40px] border-[1px] border-[#70C05B]">
                                 В корзину
                             </button>
-                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] left-[232px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
+                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] right-[15px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
                                 src="../assets/header/layk.png" alt="layk">
                         </div>
                     </div>
@@ -255,7 +270,7 @@
                                 class="w-full  rounded-[4px] text-[#70C05B] hover:text-[white] duration-[0.5s] hover:bg-[#FF6633] hover:border-none cursor-pointer h-[35px] sm:h-[40px] border-[1px] border-[#70C05B]">
                                 В корзину
                             </button>
-                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] left-[232px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
+                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] right-[15px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
                                 src="../assets/header/layk.png" alt="layk">
                         </div>
                     </div>
@@ -275,7 +290,7 @@
                                 class="w-full  rounded-[4px] text-[#70C05B] hover:text-[white] duration-[0.5s] hover:bg-[#FF6633] hover:border-none cursor-pointer h-[35px] sm:h-[40px] border-[1px] border-[#70C05B]">
                                 В корзину
                             </button>
-                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] left-[232px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
+                            <img class="absolute top-[8px] opacity-0 group-hover:opacity-100 duration-[0.5s] right-[15px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
                                 src="../assets/header/layk.png" alt="layk">
                         </div>
                     </div>
@@ -295,7 +310,7 @@
                                 class="w-full  rounded-[4px] text-[#70C05B] hover:text-[white] duration-[0.5s] hover:bg-[#FF6633] hover:border-none cursor-pointer h-[35px] sm:h-[40px] border-[1px] border-[#70C05B]">
                                 В корзину
                             </button>
-                            <img class=" absolute top-[8px]   opacity-0  group-hover:opacity-100 duration-[0.5s] left-[232px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
+                            <img class=" absolute top-[8px]   opacity-0  group-hover:opacity-100 duration-[0.5s] right-[15px] bg-[#F3F2F1] p-[5px] rounded-[4px]"
                                 src="../assets/header/layk.png" alt="layk">
                         </div>
                     </div>
@@ -315,7 +330,7 @@
                                 d="M15.3536 5.64645C15.5488 5.84171 15.5488 6.15829 15.3536 6.35355L9.70711 12L15.3536 17.6464C15.5488 17.8417 15.5488 18.1583 15.3536 18.3536C15.1583 18.5488 14.8417 18.5488 14.6464 18.3536L8.64645 12.3536C8.45118 12.1583 8.45118 11.8417 8.64645 11.6464L14.6464 5.64645C14.8417 5.45118 15.1583 5.45118 15.3536 5.64645Z"
                                 fill="#414141" />
                         </svg>
-                        <div class="flex items-center gap-[18px] sm:gap-[46px]">
+                        <div class="flex items-center gap-[18px] sm:gap-[46px] w-[85px] overflow-x-scroll">
                             <p>1</p>
                             <p>2</p>
                             <p>3</p>
@@ -384,7 +399,7 @@
                 <path
                     d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z" />
             </svg>
-                <p class="text-[12px]">Главная</p>
+            <p class="text-[12px]">Главная</p>
         </a>
         <div class="flex flex-col items-center">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
