--- a/Pages/about.html
+++ b/Pages/about.html
@@ -427,7 +427,7 @@
 
             <p class="text-[12px]">Заказы</p>
         </div>
-        <div class="flex items-center flex-col">
+        <a href="./cart.html" class="flex items-center flex-col">
             <svg width="24" height="28" viewBox="0 0 24 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M5.5 25C5.5 23.6193 6.61929 22.5 8 22.5C9.38071 22.5 10.5 23.6193 10.5 25C10.5 26.3807 9.38071 27.5 8 27.5C6.61929 27.5 5.5 26.3807 5.5 25ZM8 23.5C7.17157 23.5 6.5 24.1716 6.5 25C6.5 25.8284 7.17157 26.5 8 26.5C8.82843 26.5 9.5 25.8284 9.5 25C9.5 24.1716 8.82843 23.5 8 23.5Z"
@@ -444,7 +444,7 @@
                     fill="white" />
             </svg>
             <p class="text-[12px]">Корзина</p>
-        </div>
+        </a>
         <div>
             <img src="../assets/header/avatar (7).png" alt="avatar">
         </div>
