--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -12,7 +12,7 @@
 <body>
 
     <header class="py-[16px] bg-[white] fixed z-[100]  w-full shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
-        <div class="container mx-auto px-[20px] gap-[40px] flex items-center justify-between">
+        <div class="container mx-auto px-[20px] gap-[40px] flex items-center justify-between 2xl:px-[127px]">
             <div>
                 <a class="flex items-center gap-[11px]" href="../index.html">
                     <img class="w-[]" src="../assets/header/head-logo.png" alt="logo">
@@ -144,7 +144,7 @@
 
     <main>
         <section>
-            <div class="container mx-auto px-[20px] pt-[85px] sm:pt-[110px] pb-[40px] sm:pb-[80px]">
+            <div class="container mx-auto px-[20px] pt-[85px] sm:pt-[110px] pb-[40px] sm:pb-[80px] 2xl:px-[127px]">
                 <div class="flex items-center gap-[8px]">
                     <a href="../index.html">
                         Главная
@@ -379,7 +379,7 @@
 
 
     <footer class="bg-[url('/assets/footer/bg.png')] py-[18px] sm:py-[25px]  bg-[#F9F4E2] pb-[100px] sm:pb-[15px]">
-        <div class="container  mx-auto px-[20px]">
+        <div class="container  mx-auto px-[20px] 2xl:px-[127px]">
             <div class=" grid grid-cols-1 gap-[30px] lg:flex items-center justify-between">
                 <div class="grid grid-cols-2 gap-[40px]">
                     <div class="flex items-center gap-[20px] lg:gap-[40px]">
