--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="py-[16px] bg-[white] fixed z-[100] w-full shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
-        <div class="container mx-auto px-[20px] gap-[40px] flex items-center justify-between">
+        <div class="container mx-auto px-[20px] gap-[40px] 2xl:px-[127px] flex items-center justify-between">
             <div>
                 <a class="flex items-center gap-[11px]" href="./index.html">
                     <img class="w-[]" src="./assets/header/head-logo.png" alt="logo">
@@ -145,7 +145,7 @@
 
     <main>
         <section class="bg-[url('./assets/Home/hero-bg.png')] h-[140px] sm:h-auto pt-[90px]">
-            <div class="container mx-auto px-[20px]">
+            <div class="container mx-auto px-[20px] 2xl:px-[127px]">
                 <div class="flex items-center gap-[8px] md:gap-[18px] justify-center">
                     <img class="hidden sm:flex" src="./assets/home/hero-img.png" alt="img">
                     <h1
@@ -156,7 +156,7 @@
         </section>
 
         <section>
-            <div class="container mx-auto px-[20px] pt-[30px] sm:pt-[80px]">
+            <div class="container mx-auto px-[20px] pt-[30px] sm:pt-[80px] 2xl:px-[127px]">
                 <div class="flex items-center justify-between">
                     <h1 class="font-bold text-[24px] sm:text-[36px]">Акции</h1>
                     <a href="./Pages/about.html">
@@ -280,7 +280,7 @@
         </section>
 
         <section>
-            <div class="container mx-auto px-[20px] pt-[40px] sm:pt-[120px]">
+            <div class="container mx-auto px-[20px] pt-[40px] sm:pt-[120px] 2xl:px-[127px]">
                 <div class="flex items-center justify-between">
                     <h1 class="font-bold text-[24px] sm:text-[36px]">Новинки</h1>
                     <a href="./Pages/about.html">
@@ -377,7 +377,7 @@
         </section>
 
         <section>
-            <div class="container mx-auto px-[20px] pt-[40px] sm:pt-[120px]">
+            <div class="container mx-auto px-[20px] pt-[40px] sm:pt-[120px] 2xl:px-[127px]">
                 <div class="flex items-center justify-between">
                     <h1 class="font-bold text-[22px]  sm:text-[36px]">Покупали раньше</h1>
                     <a href="./Pages/about.html">
@@ -474,7 +474,7 @@
         </section>
 
         <section>
-            <div class="container mx-auto px-[20px] pt-[60px] sm:pt-[120px]">
+            <div class="container mx-auto px-[20px] pt-[60px] sm:pt-[120px] 2xl:px-[127px]">
                 <h1 class="text-[24px] sm:text-[36px] font-bold">Специальные предложения </h1>
                 <div
                     class="pt-[20px] sm:pt-[40px] flex flex-col gap-[20px] lg:grid grid-cols-2 gap-[20px] 2xl:gap-[100px]">
@@ -507,7 +507,7 @@
         </section>
 
         <section>
-            <div class="container mx-auto px-[20px] pt-[40px] sm:pt-[120px]">
+            <div class="container mx-auto px-[20px] pt-[40px] sm:pt-[120px] 2xl:px-[127px]">
                 <h1 class="text-[24px] sm:text-[36px] font-bold">Наши магазины</h1>
                 <div class="flex items-center gap-[18px] sm:gap-[24px] pt-[30px] sm:pt-[40px]">
                     <a class="bg-[#F3F2F1] group hover:bg-[#70C05B] hover:text-[white] duration-[0.3s] p-[8px] rounded-[4px] text-[12px]"
@@ -537,7 +537,7 @@
         </section>
 
         <section>
-            <div class="container mx-auto px-[20px] pt-[40px] pb-[150px] sm:pt-[120px]">
+            <div class="container mx-auto px-[20px] pt-[40px] pb-[150px] sm:pt-[120px] 2xl:px-[127px]">
                 <div class="flex items-center justify-between">
                     <h1 class="text-[24px] sm:text-[36px] font-bold">Статьи</h1>
                     <div class="flex items-center gap-[7px]">
@@ -609,7 +609,7 @@
     </main>
 
     <footer class="bg-[url('/assets/footer/bg.png')] py-[18px] sm:py-[25px]  bg-[#F9F4E2] pb-[100px] sm:pb-[15px]">
-        <div class="container  mx-auto px-[20px]">
+        <div class="container  mx-auto px-[20px] 2xl:px-[127px]">
             <div class=" grid grid-cols-1 gap-[30px] lg:flex items-center justify-between">
                 <div class="grid grid-cols-2 gap-[40px]">
                     <div class="flex items-center gap-[20px] lg:gap-[40px]">
