--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p class="font-bold text-[24px]">Каталог</p>
         </div>
         <hr class="text-[#70C05B]">
-        <div class="flex pt-[25px] items-center justify-center px-[35px]">
+        <div class="flex pt-[25px] items-center justify-center px-[35px] pb-[5px]">
             <input class="border-[1px] outline-none border-[#70C05B] px-[10px] w-full py-[5px] rounded-[5px]"
                 placeholder="Найти товар" type="search">
         </div>
@@ -144,7 +144,7 @@
     </div>
 
     <main>
-        <section class="bg-[url('./assets/Home/hero-bg.png')] h-[140px] sm:h-auto pt-[90px]">
+        <section class="bg-[url('../assets/Home/hero-bg.png')] h-[140px] sm:h-auto pt-[90px]">
             <div class="container mx-auto px-[20px] 2xl:px-[127px]">
                 <div class="flex items-center gap-[8px] md:gap-[18px] justify-center">
                     <img class="hidden sm:flex" src="./assets/home/hero-img.png" alt="img">
@@ -642,11 +642,12 @@
     <div
         class="flex sm:hidden bg-[white] flex fixed h-[10vw] w-[100vw] bottom-[0px] justify-between items-center flex py-[30px] px-[15px] z-[900]">
         <a href="./index.html" class="flex flex-col items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#414141">
-                <path
-                    d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z" />
-                <p class="text-[12px]">Главная</p>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M9.5 20.5002V16.0002C9.5 14.6192 10.619 13.5002 12 13.5002V13.5002C13.381 13.5002 14.5 14.6192 14.5 16.0002V20.5002H20V11.9143C20 11.3843 19.789 10.8752 19.414 10.5002L12.707 3.79325C12.316 3.40225 11.683 3.40225 11.293 3.79325L4.586 10.5002C4.211 10.8752 4 11.3843 4 11.9143V20.5002H9.5Z"
+                    stroke="#55556D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
+            <p class="text-[12px]">Главная</p>
         </a>
         <div class="flex flex-col items-center">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
