--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -108,11 +108,11 @@
             <p class="font-bold text-[24px]">Каталог</p>
         </div>
         <hr class="text-[#70C05B]">
-        <div class="flex pt-[25px] items-center justify-center px-[35px]">
+        <div class="flex pt-[25px] items-center justify-center px-[35px] pb-[5px]">
             <input class="border-[1px] outline-none border-[#70C05B] px-[10px] w-full py-[5px] rounded-[5px]"
                 placeholder="Найти товар" type="search">
         </div>
-        <ul class="flex px-[15px] flex-col py-[25px] gap-[7px]">
+        <ul class="flex px-[15px] flex-col py-[25px] gap-[7px] h-[480px] overflow-y-scroll">
             <li>Молоко, сыр, яйцо</li>
             <hr class="text-[#70C05B]">
             <li>Хлеб</li>
@@ -141,7 +141,7 @@
             <hr class="text-[#70C05B]">
         </ul>
     </div>
-
+    
     <main>
         <section>
             <div class="container mx-auto px-[20px] pt-[85px] sm:pt-[110px] pb-[40px] sm:pb-[80px] 2xl:px-[127px]">
@@ -412,9 +412,10 @@
     <div
         class="flex sm:hidden bg-[white] flex fixed h-[10vw] w-[100vw] bottom-[0px] justify-between items-center flex py-[30px] px-[15px] z-[900]">
         <a class="flex flex-col items-center" href="../index.html">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#414141">
-                <path
-                    d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z" />
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M9.5 20.5002V16.0002C9.5 14.6192 10.619 13.5002 12 13.5002V13.5002C13.381 13.5002 14.5 14.6192 14.5 16.0002V20.5002H20V11.9143C20 11.3843 19.789 10.8752 19.414 10.5002L12.707 3.79325C12.316 3.40225 11.683 3.40225 11.293 3.79325L4.586 10.5002C4.211 10.8752 4 11.3843 4 11.9143V20.5002H9.5Z"
+                    stroke="#55556D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
             <p class="text-[12px]">Главная</p>
         </a>
@@ -445,12 +446,21 @@
             <p class="text-[12px]">Заказы</p>
         </div>
         <a href="./cart.html" class="flex items-center flex-col">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="24" height="28" viewBox="0 0 24 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M9.5 20.5002V16.0002C9.5 14.6192 10.619 13.5002 12 13.5002V13.5002C13.381 13.5002 14.5 14.6192 14.5 16.0002V20.5002H20V11.9143C20 11.3843 19.789 10.8752 19.414 10.5002L12.707 3.79325C12.316 3.40225 11.683 3.40225 11.293 3.79325L4.586 10.5002C4.211 10.8752 4 11.3843 4 11.9143V20.5002H9.5Z"
-                    stroke="#55556D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    d="M5.5 25C5.5 23.6193 6.61929 22.5 8 22.5C9.38071 22.5 10.5 23.6193 10.5 25C10.5 26.3807 9.38071 27.5 8 27.5C6.61929 27.5 5.5 26.3807 5.5 25ZM8 23.5C7.17157 23.5 6.5 24.1716 6.5 25C6.5 25.8284 7.17157 26.5 8 26.5C8.82843 26.5 9.5 25.8284 9.5 25C9.5 24.1716 8.82843 23.5 8 23.5Z"
+                    fill="#414141" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M17.5 25C17.5 23.6193 18.6193 22.5 20 22.5C21.3807 22.5 22.5 23.6193 22.5 25C22.5 26.3807 21.3807 27.5 20 27.5C18.6193 27.5 17.5 26.3807 17.5 25ZM20 23.5C19.1716 23.5 18.5 24.1716 18.5 25C18.5 25.8284 19.1716 26.5 20 26.5C20.8284 26.5 21.5 25.8284 21.5 25C21.5 24.1716 20.8284 23.5 20 23.5Z"
+                    fill="#414141" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M1 4.5C0.723858 4.5 0.5 4.72386 0.5 5C0.5 5.27614 0.723858 5.5 1 5.5H4.58051C5.33783 9.79147 6.10333 14.0643 6.74931 18.3709C6.93288 19.5947 7.98416 20.5 9.22165 20.5H19.3597C20.5514 20.5 21.5774 19.6588 21.8111 18.4903L23.2503 11.2942C23.436 10.366 22.726 9.5 21.7795 9.5H7.16046C6.8575 9.5 6.57797 9.58901 6.34436 9.74093L5.49239 4.91311C5.45023 4.67418 5.24262 4.5 5 4.5H1ZM6.666 11.0742C6.62065 10.7719 6.85478 10.5 7.16046 10.5H21.7795C22.095 10.5 22.3316 10.7887 22.2698 11.0981L20.8305 18.2942C20.6903 18.9953 20.0747 19.5 19.3597 19.5H9.22165C8.47916 19.5 7.84839 18.9568 7.73825 18.2225L6.666 11.0742Z"
+                    fill="#414141" />
+                <rect x="11.8604" width="11.28" height="11" rx="4" fill="#FF6633" />
+                <path
+                    d="M18.3804 9C18.3137 9 18.257 8.98 18.2104 8.94C18.1704 8.89333 18.1504 8.83667 18.1504 8.77V3.17L16.4904 4.45C16.4437 4.49 16.3937 4.51 16.3404 4.51C16.2804 4.51 16.2237 4.47667 16.1704 4.41L15.9104 4.08C15.877 4.03333 15.8604 3.98667 15.8604 3.94C15.8604 3.86 15.8937 3.79667 15.9604 3.75L18.1404 2.07C18.2137 2.02333 18.3004 2 18.4004 2H18.9104C18.977 2 19.0304 2.02333 19.0704 2.07C19.117 2.11 19.1404 2.16333 19.1404 2.23V8.77C19.1404 8.83667 19.117 8.89333 19.0704 8.94C19.0304 8.98 18.977 9 18.9104 9H18.3804Z"
+                    fill="white" />
             </svg>
-
             <p class="text-[12px]">Корзина</p>
         </a>
         <div>
